[package]
name = "webauthn-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = { version = "0.19", features = ["with-serde_json-1"] }
p256 = { version = "0.13", features = ["ecdsa", "sha256"] }
ecdsa = { version = "0.16", features = ["der", "signing", "verifying"] }
sha2 = "0.10"
base64-url = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
rand = "0.8"
anyhow = "1.0"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }